Initialize Clarity smart contract for eco-token exchange platform
- Set up core contract infrastructure with token registry and marketplace functionality
- Configure Clarinet project for testing and deployment
- Implement multi-tier governance system for authorization
- Add comprehensive test coverage for all major operations
- Document architecture and usage patterns in README

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "eco-token-exchange-tests",
+  "name": "eco-token-exchange",
   "version": "1.0.0",
   "description": "Run unit tests on this project.",
   "type": "module",
